--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -1,35 +1,31 @@
--- .github/workflows/dependabot-prs.yml
-- name: Fetch Metadata from Dependabot PRs
-  uses: dependabot/fetch-metadata@v1.3.6
-
+---
 name: Dependabot Pull Request
-on: pull_request_target
+on:
+  pull_request_target:
+    types: [opened, synchronize]
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Fetch Dependabot metadata
-      id: dependabot-metadata
-      uses: dependabot/fetch-metadata@v1.3.6
-      with:
-        alert-lookup: true
-        compat-lookup: true
-        github-token: "${{ secrets.PAT_TOKEN }}"
+      - name: Fetch Dependabot metadata
+        id: dependabot-metadata
+        uses: dependabot/fetch-metadata@v1.3.6
+        with:
+          alert-lookup: true
+          compat-lookup: true
+          github-token: "${{ secrets.PAT_TOKEN }}"
 
-- name: Dependabot auto-approve
-on: pull_request_target
-permissions:
-  pull-requests: write
-jobs:
-  dependabot:
+  dependabot-auto-approve:
     runs-on: ubuntu-latest
-    # Checking the author will prevent your Action run failing on non-Dependabot PRs
     if: ${{ github.event.pull_request.user.login == 'dependabot[bot]' }}
+    permissions:
+      pull-requests: write
     steps:
       - name: Dependabot metadata
         id: dependabot-metadata
         uses: dependabot/fetch-metadata@v1.3.6
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
       - name: Approve a PR if not already approved
         run: |
           gh pr checkout "$PR_URL" # sets the upstream metadata for `gh pr status`
@@ -41,15 +37,12 @@ jobs:
           PR_URL: ${{github.event.pull_request.html_url}}
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
-- name: Dependabot auto-merge
-on: pull_request_target
-permissions:
-  pull-requests: write
-  contents: write
-jobs:
-  dependabot:
+  dependabot-auto-merge:
     runs-on: ubuntu-latest
     if: ${{ github.event.pull_request.user.login == 'dependabot[bot]' }}
+    permissions:
+      pull-requests: write
+      contents: write
     steps:
       - name: Dependabot metadata
         id: dependabot-metadata
@@ -61,20 +54,17 @@ jobs:
           PR_URL: ${{github.event.pull_request.html_url}}
           GH_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
-- name: Dependabot auto-label
-on: pull_request_target
-permissions:
-  pull-requests: write
-  issues: write
-  repository-projects: write
-jobs:
-  dependabot:
+  dependabot-auto-label:
     runs-on: ubuntu-latest
     if: ${{ github.event.pull_request.user.login == 'dependabot[bot]' }}
+    permissions:
+      pull-requests: write
+      issues: write
+      repository-projects: write
     steps:
       - name: Dependabot metadata
         id: dependabot-metadata
-        uses: dependabot/fetch-metadata@v1
+        uses: dependabot/fetch-metadata@v1.3.6
       - name: Add a label for all production dependencies
         if: ${{ steps.dependabot-metadata.outputs.dependency-type == 'direct:production' }}
         run: gh pr edit "$PR_URL" --add-label "production"
